services/databases/pgadmin/02-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  namespace: pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
        - name: pgadmin
          image: dpage/pgadmin4:8.14
          imagePullPolicy: IfNotPresent # ou Always, para garantir que temos a última versão?
          resources: # Que valores devemos usar, para já temos isto como default?
            limits:
              memory: "512Mi" # mais, menos?
              cpu: "1" # 1, 500m, ...?
              requests:
                memory: "32Mi" # mais, menos?
                cpu: "0m" # 0m, 100m, ...?
          ports: # que port usar? 80 ou outro?
            - containerPort: 80
          volumeMounts:
            - name: pgadmin-config
              mountPath: /pgadmin4/servers.json
              subPath: servers.json
              readOnly: true
            - name: pgadmin-data
              mountPath: /var/lib/pgadmin
      volumes:
        - name: pgadmin-config
          configMap:
            name: pgadmin-config
        - name: pgadmin-data
          persistentVolumeClaim:
            claimName: pgadmin-data
---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  namespace: pgadmin
spec:
  selector:
    app: pgadmin
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP # é preciso especificar o protocolo?
  type: ClusterIP # ou NodePort, LoadBalancer? ClusterIP é suficiente para o Traefik aceder ao serviço, certo? Precisamos de deixar definido mesmo?
